# hpx_collectives

./: CMakeLists.txt  README.md  hpx_collectives.spdx
examples/: test.cpp
include/hpx/lcos/: distributed_object.hpp
include/hpx_collectives/: broadcast.hpp  broadcast_binary.hpp  broadcast_binomial.hpp  collective_traits.hpp  collectives.hpp  gather.hpp  gather_binary.hpp  gather_binomial.hpp  reduce.hpp  reduce_binary.hpp  reduce_binomial.hpp  scatter.hpp  scatter_binary.hpp  scatter_binomial.hpp  serialization.hpp  serialization_boost.hpp  serialization_hpx.hpp  tuple_types.hpp  utils.hpp
